# muze-archive

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  SOURCEDEPS  TODO.txt  autogen.sh  configure  configure.ac  meeting-may-23.txt  muzec  scratch.txt  test.sh
config/: #conf.ld#  conf.ld
docs/: paper-outline.org  railroad.tex  syntax.tex
examples/: ex1  ex2  ex_declaration_syntax_1.txt  scratch.mu  test.mz
include/: ast.h  codegen.h  context.h  lexer.h  limits.h  morph_graph.h  print_tree.h  symbol.h  symbol_structs.h  type.h  util.h
lib/: Makefile  conf.ld  muze_stdlib.h  stdlib.c
lib/libmuzeruntime/: Makefile
lib/libmuzeruntime/include/: muze_stdlib.h
lib/libmuzeruntime/src/: muze_stdlib.c
outputs/: scratch.out
share/muze/: muze.ld
src/: Makefile  ast.h  ast.h~  codegen.c  context.c  lexer.c  lexer.h  limits.h  main.c  morph_graph.c  muze_stdlib.c  parser.c  print_tree.c  print_tree.h  symbol.c  type.c  util.c  util.h
test/: parse.morph  simple.mz  sorting.mz  types.mz
test/.archive/conditional/: conditional.mz
test/.archive/loop/: loop.mz
test/success/arg-morph/: arg-morph.mz  expected.txt
test/success/array/: array.mz
test/success/array_2dim/: array_2dim.mz  expected.txt
test/success/arrays/: arrays.mz
test/success/assignment-morph/: assignment-morph.mz
test/success/conditional/: conditional.mz  expected.txt
test/success/conditional-morph/: conditional-morph.mz  expected.txt
test/success/hello/: hello  hello.mz
test/success/loop/: expected.txt  loop.mz
(+9 files in other folders)
